--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AdventOfCodeSupport" Version="2.3.2" />
+    <PackageReference Include="AdventOfCodeSupport" Version="2.3.3" />
+    <PackageReference Include="RBush" Version="3.2.0" />
     <PackageReference Include="Sprache" Version="2.3.1" />
   </ItemGroup>
 
