--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AdventOfCodeSupport" Version="2.3.3" />
     <PackageReference Include="Sprache" Version="2.3.1" />
+    <PackageReference Include="Themis.Index" Version="2023.10.12" />
   </ItemGroup>
 
   <ItemGroup>
