--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>724ab2e9-90bc-456e-bfcc-6790c80e1e71</UserSecretsId>
   </PropertyGroup>
