--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdventOfCodeSupport" Version="2.4.2" />
+    <PackageReference Include="morelinq" Version="4.1.0" />
     <PackageReference Include="Sprache" Version="2.3.1" />
   </ItemGroup>
 
